--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@ html, body {
   font-family: sans-serif;
   background-image: url("./img/1.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100%;
   height: 100%;
+}
+
+.counter {
+    color: rgba(81, 193, 228, 0.534);
 }
